Change dashboard to reflect front end on (services and apps)

--- a/dashboard/views/en/services.html
+++ b/dashboard/views/en/services.html
@@ -10,7 +10,7 @@
 <meta name="author" content="Subely">
 
 <!-- Title -->
-<title>Subely - Impressive Webdesign &amp; Front-End Development</title>
+<title>Subely</title>
 
 <!-- Favicons -->
 <link rel="shortcut icon" href="../../assets/img/favicon.png">
@@ -66,11 +66,11 @@
                             <span class="banner2"></span>
                         </span>
                         <div class="service-txt">
-                            <h1><strong>Websites</strong> production</h1>
-                            <p class="lead text-muted">Creative &amp; modern website based on the newest web technologies.</p>
+                            <h1>Securing Your Information with <strong>Artificail Inteligence</strong></h1>
+                            <p class="lead text-muted">Continualy Investigating Threats &amp; Attacks Across the Internet</p>
                         </div>
                         <ul class="list-technologies">
-                            <li><span class="photoshop"></span></li>
+                            <!-- <li><span class="photoshop"></span></li>
                             <li><span class="illustrator"></span></li>
                             <li><span class="html5"></span></li>
                             <li><span class="css3"></span></li>
@@ -78,7 +78,7 @@
                             <li><span class="sass"></span></li>
                             <li><span class="bootstrap"></span></li>
                             <li><span class="angularjs"></span></li>
-                        </ul>
+                        </ul> -->
 
                     </div>
                 </div>
@@ -97,17 +97,19 @@
                             <span class="key4"></span>
                         </span>
                         <div class="service-txt">
-                            <h1><strong>Front-end</strong> development</h1>
-                            <p class="lead text-muted">Mobile friendly development with impressive effects &amp; parfect code.</p>
+                            <h1>Making it <strong>Simple </strong></h1>
+                            <p class="lead text-muted">Our new protocol makes FTP a thing of the past!</p>
                         </div>
-                        <ul class="list-technologies">
+                        <!-- <ul class="list-technologies">
                             <li><span class="html5"></span></li>
                             <li><span class="css3"></span></li>
                             <li><span class="jquery"></span></li>
                             <li><span class="sass"></span></li>
                             <li><span class="bootstrap"></span></li>
                             <li><span class="angularjs"></span></li>
-                        </ul>
+                        </ul> -->
+                        <ul class="list-technologies">
+                          <li><span class="ftp"></span></li>
 
                     </div>
                 </div>
@@ -126,12 +128,18 @@
                             <span class="box3"></span>
                         </span>
                         <div class="service-txt">
-                            <h1><strong>Website / App</strong> design</h1>
-                            <p class="lead text-muted">Neat website &amp; app desigs based on current trends.</p>
+                            <h1><strong>Designed</strong> to be Clean</h1>
+                            <p class="lead text-muted">Neat website &amp; panel desigs based on current trends.</p>
                         </div>
                         <ul class="list-technologies">
                             <li><span class="photoshop"></span></li>
                             <li><span class="illustrator"></span></li>
+                            <li><span class="html5"></span></li>
+                            <li><span class="css3"></span></li>
+                            <li><span class="jquery"></span></li>
+                            <li><span class="sass"></span></li>
+                            <li><span class="bootstrap"></span></li>
+                            <li><span class="angularjs"></span></li>
                         </ul>
 
                     </div>
@@ -146,8 +154,8 @@
                         <span class="service-icon icon-graphic"></span>
                         </span>
                         <div class="service-txt">
-                            <h1><strong>Graphic</strong> design</h1>
-                            <p class="lead text-muted">Creative graphics perfect for your business.</p>
+                            <h1><strong>Immediate</strong> Server Response </h1>
+                            <p class="lead text-muted">Once Linked, Files are Uploaded As Soon As Saved</p>
                         </div>
                         <ul class="list-technologies">
                             <li><span class="photoshop"></span></li>
