fetch dropbox latest changes
Added new packages page and ability to fetch dropbox changes updated by webhook

--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -43,6 +44,7 @@
 
 <!-- Content -->
 <div class="container" id="content">
+
     <section id="home" class="section dark bg-black" style="background-image: url('assets/img/photos/bg-space-grey.jpg')">
 
         <div class="section-wrapper">
@@ -53,6 +55,7 @@
                     <div class="subs--top--right">
                       <!-- <a href="" class="no-animate btn btn-xs btn-default" id="toggle-sub-view" style="color: black;"><i class="fa fa-th" aria-hidden="true"></i></a> -->
                       <a data-change-view="false" data-toggle="modal" data-target="#myModal" class="btn btn-home-main"><span>Add <strong>Site</strong></span><i class="ti-plus"></i></a>
+                      <a id="check_changes" class="btn btn-home-main">Download dropbox files</span><i class="ti-plus"></i></a>
                     </div>
                     <div class="subs--top--left">
                         <input id="filter" type="text" class="form-control" placeholder="Type here...">
@@ -158,6 +161,12 @@
 
   ga('create', 'UA-44410203-1', 'Subely.pl');
   ga('send', 'pageview');
+
+
+
+
+
+         
 </script>
 
 </body>
