--- a/views/en/header.html
+++ b/views/en/header.html
@@ -7,6 +7,7 @@
     <nav id="main-nav">
         <ul class="nav nav-horizontal nav-main">
             <li><a href="services" data-change-view="true">Services</a></li>
+            <li><a href="packages" data-change-view="true">Packages</a></li>
             <li><a href="portfolio" data-change-view="true">Hosting Options</a></li> 
 <!--             <li><a href="signin" data-change-view="true">Sign Up</a></li> -->
             <li><a href="contact" data-change-view="true">Contact &amp; Support</a></li>
