--- a/views/en/packages.html
+++ b/views/en/packages.html
@@ -93,7 +93,7 @@
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a  id="check_stripe" class="btn btn-success" role="button">Sign Up</a>
+                    <a  class="btn btn-success" role="button" data-toggle="modal" data-target="#payment">Sign Up</a>
                     1 month FREE trial</div>
             </div>
         </div>
@@ -144,7 +144,7 @@
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a  class="btn btn-success" role="button">Sign Up</a>
+                    <a class="btn btn-success" role="button" data-toggle="modal" data-target="#payment">Sign Up</a>
                     1 month FREE trial</div>
             </div>
         </div>
@@ -194,13 +194,112 @@
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a  class="btn btn-success" role="button">Sign Up</a> 1 month FREE trial</div>
+                    <a  class="btn btn-success" role="button" data-toggle="modal" data-target="#payment">Sign Up</a> 1 month FREE trial</div>
             </div>
         </div>
            </div>
         </div>
 
-        
+
+
+
+                
+                <!--<div class="custom-alerts alert alert-success fade in">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true"></button>
+                    
+                </div>  -->
+               
+               
+              <!--  <div class="custom-alerts alert alert-danger fade in">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true"></button>
+                 
+                </div> -->
+<div style="margin-top: 100px;" id="payment" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Stripe</h4>
+      </div>
+      <div class="modal-body">
+
+                <div class="panel-heading">Pay with Stripe</div>
+                <div class="panel-body">
+                    <form class="form-horizontal" id="payment-form" role="form" method="POST">
+                        
+                        <div class="form-group">
+                            <label for="card_no" class="col-md-4 control-label">Card No</label>
+                            <div class="col-md-6">
+                                <input id="card_no" type="text" name="card_no" value="" autofocus>
+                               
+                                  <!--  <span class="help-block">
+                                        <strong></strong>
+                                    </span> -->
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="ccExpiryMonth" class="col-md-4 control-label">Expiry Month</label>
+                            <div class="col-md-6">
+                                <input id="ccExpiryMonth" type="text"  name="ccExpiryMonth" value="" autofocus>
+                               
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="ccExpiryYear" class="col-md-4 control-label">Expiry Year</label>
+                            <div class="col-md-6">
+                                <input id="ccExpiryYear" type="text"  name="ccExpiryYear" value="" autofocus>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="cvvNumber" class="col-md-4 control-label">CVV No.</label>
+                            <div class="col-md-6">
+                                <input id="cvvNumber" type="text"  name="cvvNumber" value="" autofocus>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="amount" class="col-md-4 control-label">Amount</label>
+                            <div class="col-md-6">
+                                <input id="amount" type="text"  name="amount" value="" >
+                            </div>
+                        </div>
+                        
+                        <div class="form-group">
+                            <div class="col-md-6 col-md-offset-4">
+                                <button id="submit-payment" class="btn btn-primary">
+                                    Pay
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <p>Some text in the modal.</p>
+      </div>
+
+
+<div style="margin-top: 100px;" id="payment-response" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Stripe</h4>
+      </div>
+      <div class="modal-body">
+
+        <p id="display-response"></p>
+        <a type="button" class="btn btn-success" data-dismiss="modal">OK</a>
+      </div>
+      </div>
+    </div>
+</div>
+  
 
     </section>
 </div>
