Change background and home page wording

--- a/views/en/header.html
+++ b/views/en/header.html
@@ -7,7 +7,7 @@
     <nav id="main-nav">
         <ul class="nav nav-horizontal nav-main">
             <li><a href="services" data-change-view="true">Services</a></li>
-            <li><a href="portfolio" data-change-view="true">Hosting Options</a></li> 
+            <li><a href="portfolio" data-change-view="true">Hosting Options</a></li>
 <!--             <li><a href="signin" data-change-view="true">Sign Up</a></li> -->
             <li><a href="contact" data-change-view="true">Contact &amp; Support</a></li>
             <!-- <li><a href="http://subely.com/user/Subely/portfolio?ref=Subely" target="_blank" class="external">DevDuo</a></li> -->
@@ -25,9 +25,9 @@
     <!-- <li><a href="login" class="left-header-btn"data-change-view="true">Services</a></li> -->
 
     <!-- Text -->
-    <div class="typing">
+    <!--<div class="typing">
         <span id="typing-text" class="typing-text"></span>
-    </div>
+    </div> -->
 
     <!-- Mobile Title -->
     <h1 id="mobile-title"></h1>
