--- a/views/en/home.html
+++ b/views/en/home.html
@@ -61,11 +61,11 @@
                 <div class="home-middle v-center">
                     <div class="text-swiper">
                         <div class="swiper-wrapper">
-                            <h1 class="swiper-slide"> A <strong> New </strong> Web Hosting Solution</h1>
+                            <h1 class="swiper-slide"> The <strong> Future </strong> of web hosting</h1>
                             <h1 class="swiper-slide"><strong> Disrupting </strong> the industry</h1>
                             <h1 class="swiper-slide">Secured with <strong> Artificial Intelegance </strong></h1>
-                            <h1 class="swiper-slide">Let's Work to Host <strong> Your </strong> Datta</h1>
-                            <h1 class="swiper-slide">Guaranteed <strong> Satisfaction </strong> with our service</h1>
+                            <h1 class="swiper-slide"><strong> Changing </strong> the internet</h1>
+                            <h1 class="swiper-slide"><strong> Changing </strong> the world</h1>
                         </div>
                     </div>
                 </div>
