--- a/dashboard/views/en/header.html
+++ b/dashboard/views/en/header.html
@@ -9,9 +9,11 @@
         <ul class="nav nav-horizontal nav-main">
             <!-- <li><a href="portfolio" data-change-view="true">Portfolio</a></li> -->
             <li><a href="services" data-change-view="true">Apps</a></li>
+
             <!-- <li><a href="signin" data-change-view="true">Sign In</a></li> -->
             <li><a href="contact" data-change-view="true">Contact &amp; Support</a></li>
             <!-- <li><a href="http://subely.com/user/Subely/portfolio?ref=Subely" target="_blank" class="external">DevDuo</a></li> -->
+            <li><a href="packages" data-change-view="true">Packages</a></li>
         </ul>
         <span id="nav-selector" class="bg-primary"></span>
     </nav>
