--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -126,19 +126,20 @@
 
 
 
-<div style="margin-top: 100px;" id="dropbox-response" class="modal fade" role="dialog">
+<div style="margin-top: 100px;" id="delete-folder" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
     <div class="modal-content text-center">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Dropbox</h4>
+        <h4 class="modal-title">Confirmation</h4>
       </div>
       <div class="modal-body">
-
-        <p id="display-dropbox-response"></p>
-        <a type="button" class="btn btn-success" data-dismiss="modal">OK</a>
+        <p>Are you sure you want to delete this folder</p>
+        <input id="delete-dropbox-folder" type="checkbox"> Delete this folder from dropbox
+        <a type="button" class="btn btn-success delete-sub">Yes</a>
+        <a type="button" class="btn btn-success" data-dismiss="modal">Cancel</a>
       </div>
       </div>
     </div>
