--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -139,8 +139,9 @@
         <p>Are you sure you want to delete this folder</p>
         <input id="delete-dropbox-folder" type="checkbox"> Delete this folder from dropbox
         <br>
-        <a type="button" class="btn btn-success delete-sub">Yes</a>
-        <a type="button" class="btn btn-success" data-dismiss="modal">Cancel</a>
+        <br>
+        <a style="width:15%;" type="button" class="btn btn-success delete-sub">Yes</a>
+        <a style="width:15%;" type="button" class="btn btn-success" data-dismiss="modal">Cancel</a>
       </div>
       </div>
     </div>
