improved modal design

--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -140,8 +140,8 @@
         <input id="delete-dropbox-folder" type="checkbox"> Delete this folder from dropbox
         <br>
         <br>
-        <a style="width:15%;" type="button" class="btn btn-success delete-sub">Yes</a>
-        <a style="width:15%;" type="button" class="btn btn-success" data-dismiss="modal">Cancel</a>
+        <a type="button" class="btn btn-success delete-sub">Yes</a>
+        <a type="button" class="btn btn-success" data-dismiss="modal">Cancel</a>
       </div>
       </div>
     </div>
