--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -137,7 +137,7 @@
       </div>
       <div class="modal-body">
         <p>Are you sure you want to delete this folder</p>
-        <input id="delete-dropbox-folder" type="checkbox"> Delete this folder from dropbox
+        <input id="delete-dropbox-folder" value="1" type="checkbox"> Delete this folder from dropbox
         <br>
         <br>
         <a type="button" class="btn btn-success delete-sub">Yes</a>
