--- a/dashboard/views/en/header.html
+++ b/dashboard/views/en/header.html
@@ -25,7 +25,7 @@
 
 
     <div class="dropdown right-header">
-      <a id="display-user-name" href="" class="dropdown-toggle left-header-btn" aria-haspopup="true" aria-expanded="true" data-toggle="dropdown">Seth Horsley<i class="fa fa-angle-right"></i></a>
+      <a id="display-user-name" href="" class="dropdown-toggle left-header-btn" aria-haspopup="true" aria-expanded="true" data-toggle="dropdown"><i class="fa fa-angle-right"></i></a>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
         <span class="triangle"></span>
         <li><a href="#">Profile <i class="fa fa-user" aria-hidden="true"></i></a></li>
