--- a/dashboard/views/en/packages.html
+++ b/dashboard/views/en/packages.html
@@ -45,9 +45,9 @@
 <div id="content">
     <section id="packages" class="section bg-black">
         <div class="container">
-           <div class="row text-center" style="margin-top:100px;">
+           <div id="packages-and-plans" class="row text-center" style="margin-top:100px;">
 
-              <div class="col-xs-12 col-md-4">
+         <div class="col-xs-12 col-md-4">
             <div class="panel panel-success">
                 <div class="panel-heading">
                     <h3 style="color:black;" class="panel-title">
