trigger plans jquery on clicking packages

--- a/dashboard/views/en/header.html
+++ b/dashboard/views/en/header.html
@@ -13,7 +13,7 @@
             <!-- <li><a href="signin" data-change-view="true">Sign In</a></li> -->
             <li><a href="contact" data-change-view="true">Contact &amp; Support</a></li>
             <!-- <li><a href="http://subely.com/user/Subely/portfolio?ref=Subely" target="_blank" class="external">DevDuo</a></li> -->
-            <li><a href="packages" data-change-view="true">Packages</a></li>
+            <li><a class="packages" href="packages" data-change-view="true">Packages</a></li>
         </ul>
         <span id="nav-selector" class="bg-primary"></span>
     </nav>
