fixed design issues

--- a/dashboard/views/en/packages.html
+++ b/dashboard/views/en/packages.html
@@ -97,9 +97,9 @@
                                 <input id="ccExpiryMonth" type="text"  name="ccExpiryMonth" value="" autofocus>
                                
                             </div> -->
-                            <select id='ccExpiryMonth'">
-                              <option value=''>--Select Month--</option>
-                              <option selected value='1'>January</option>
+                            <select id='ccExpiryMonth' class="col-md-4 control-label">
+                              <option value='' selected>--Select Month--</option>
+                              <option value='1'>January</option>
                               <option value='2'>February</option>
                               <option value='3'>March</option>
                               <option value='4'>April</option>
