--- a/dashboard/views/en/packages.html
+++ b/dashboard/views/en/packages.html
@@ -118,7 +118,21 @@
                         <div class="form-group">
                             <label for="ccExpiryYear" class="col-md-4 control-label">Expiry Year</label>
                             <div class="col-md-6">
-                                <input id="ccExpiryYear" type="text"  name="ccExpiryYear" value="" autofocus>
+                              <select id='ccExpiryYear'>
+                                <option value='' selected>--Select Year--</option>
+                                <option value='2017'>2017</option>
+                                <option value='2018'>2018</option>
+                                <option value='2019'>2019</option>
+                                <option value='2020'>2020</option>
+                                <option value='2021'>2021</option>
+                                <option value='2022'>2022</option>
+                                <option value='2023'>2023</option>
+                                <option value='2024'>2024</option>
+                                <option value='2025'>2025</option>
+                                <option value='2026'>2026</option>
+                                <option value='2027'>2027</option>
+                                <option value='2028'>2028</option>
+                              </select> 
                             </div>
                         </div>
                         <div class="form-group">
@@ -133,6 +147,7 @@
                                 <input id="amount" type="text"  name="amount" value="" >
                             </div>
                         </div>
+                        <input type="hidden" id="package-name" value="">
                         
                         <div class="form-group">
                             <div class="col-md-6 col-md-offset-4">
