--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -146,6 +146,25 @@
       </div>
     </div>
 </div>
+
+
+<div style="margin-top: 100px;" id="limit_folders" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content text-center">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Error</h4>
+      </div>
+      <div class="modal-body">
+        <p id="limit_folders_response"></p>
+        <a type="button" class="btn btn-success" data-dismiss="modal">OK</a>
+      </div>
+      </div>
+    </div>
+</div>
+
   
 
     </section>
