--- a/dashboard/views/en/home.html
+++ b/dashboard/views/en/home.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="description" content="Subely -- Web hosting solution">
 <meta name="keywords" content="Subely, sub, subs, sub hosting, dropbox hosting, dropbox web hosting, webhosting, free webhosting, free hosting, alternative">
-<meta name="author" content="Subely">
+<meta name="author" content="Subely Co">
 
 <!-- Title -->
 <title>Subely - Impressive Webdesign &amp; Front-End Development</title>
