--- a/dashboard/views/en/homea.html
+++ b/dashboard/views/en/homea.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="description" content="A new hosting solution">
 <meta name="keywords" content="Subely, hosting, dropbox hosting, sub hosting, web hosting">
-<meta name="author" content="Subely">
+<meta name="author" content="Subely Co">
 
 <!-- Title -->
 <title>Subely - Impressive Webdesign &amp; Front-End Development</title>
