--- a/views/en/home.html
+++ b/views/en/home.html
@@ -5,9 +5,9 @@
 <!-- Meta -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<meta name="description" content="Hi! My name is Piotr Osmola. I offer professional graphic desgin and front-end webdeveloper.">
-<meta name="keywords" content="Subely, webdesign, front-end development, webdevelopment, app design, corporate identity, branding.">
-<meta name="author" content="Subely">
+<meta name="description" content="A different hosting service">
+<meta name="keywords" content="Subely, sub, hosting, dropbox hosting, simple hosting, free hosting, flatfile hosting">
+<meta name="author" content="Subely Co">
 
 <!-- Titles -->
 <title>Subely</title>
