--- a/views/en/header.html
+++ b/views/en/header.html
@@ -25,9 +25,9 @@
     <!-- <li><a href="login" class="left-header-btn"data-change-view="true">Services</a></li> -->
 
     <!-- Text -->
-    <!--<div class="typing">
+    <div class="typing">
         <span id="typing-text" class="typing-text"></span>
-    </div> -->
+    </div>
 
     <!-- Mobile Title -->
     <h1 id="mobile-title"></h1>
