--- a/views/en/header.html
+++ b/views/en/header.html
@@ -6,8 +6,11 @@
     <!-- Navigation -->
     <nav id="main-nav">
         <ul class="nav nav-horizontal nav-main">
+            <li><a href="about" data-change-view="true">About</a></li>
             <li><a href="services" data-change-view="true">Services</a></li>
             <li><a href="portfolio" data-change-view="true">Hosting Options</a></li>
+            <li><a href="team_member" data-change-view="true">Team Member</a></li>
+
 <!--             <li><a href="signin" data-change-view="true">Sign Up</a></li> -->
             <li><a href="contact" data-change-view="true">Contact &amp; Support</a></li>
             <!-- <li><a href="http://subely.com/user/Subely/portfolio?ref=Subely" target="_blank" class="external">DevDuo</a></li> -->
