--- a/views/en/mobile-nav.html
+++ b/views/en/mobile-nav.html
@@ -4,7 +4,9 @@
     <nav id="side-nav">
         <ul class="nav nav-vertical nav-main">
             <li><a href="home" data-change-view="true"><span>Home</span></a></li>
+            <li><a href="about" data-change-view="true">About</a></li>
             <li><a href="services" data-change-view="true"><span>Services</span></a></li>
+            <li><a href="team_member" data-change-view="true">Team Member</a></li>
             <li><a href="portfolio" data-change-view="true"><span>Portfolio</span></a></li>
             <li><a href="signin" data-change-view="true"><span>Sign In</span></a></li>
             <li><a href="contact" data-change-view="true"><span>Contact &amp; Support</span></a></li>
