--- a/views/en/about.html
+++ b/views/en/about.html
@@ -24,130 +24,22 @@
 <link rel="stylesheet" href="../../assets/css/styles.css" />
 <!-- CSS Animations -->
 <link rel="stylesheet" href="../../assets/css/animate.css" />
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <!-- CSS Template -->
 <link rel="stylesheet" href="../../assets/css/base.css" />
 <!-- <link rel="stylesheet" href="fonts/hostrocket.css" /> -->
 <style>
-body.about{background:#e0f3ff;font-family:roboto;}
-body.about .section-wrapper{display:flex; justify-content:center; flex-direction:column; text-align:center;}
-.mainContent{width:80%;margin:auto;text-align:center;transition:all 1.6s ease-out;-moz-transition:all 1.6s ease-out;-webkit-transition:all 1.6s ease-out;}
-.mainContent h1{font-size:50px;font-weight:300;flex-shrink:0;margin:0 0 30px;padding:0;}
-.mainContent h1 span{font-weight:bold;}
-.mainContent ul.history{list-style:none;text-align:center;padding:0;overflow:hidden;}
-.mainContent ul.history li{font-size:70px;font-weight:400;width:25%;float:left;border-left:1px solid #e0e0e0;padding:25px;box-sizing:border-box;}
-.mainContent ul.history li i{color:#000;}
-.mainContent ul.history li.first{border-left:0px solid #aaa;}
-.mainContent ul.history li h4{font-size:18px;font-weight:700;display:block;margin:0;padding:0;text-transform:uppercase;color:#333;}
-.mainContent ul.history li .about-stat-bottomtext{font-size:13px;font-weight:400;display:block;color:#666;}
-<!-- .mainContent .aboutAccordian{text-align:left;}
-.mainContent .aboutAccordian h5 button{color:#000;}
-.mainContent .aboutAccordian p{} -->
-.mainContent .buttons{margin:20px 0;}
-.mainContent .buttons .btn{border-radius:4px;}
-.mainContent .buttons .btn-primary{background:#3396de;margin-right:10px;}
-.mainContent .buttons .btn-primary:hover,
-.mainContent .buttons .btn-primary:focus{background:#2188d3;}
-.mainContent .buttons .btn-danger{background:#8dc045;}
-.mainContent .buttons .btn-danger:hover,
-.mainContent .buttons .btn-danger:focus{background:#7db133;}
 
-.mainContent .columns {
-	width:100%;
-	float:left;
-	background:#fff;
-	padding:20px 0;
-	text-align:left;
-}
-.mainContent .team-member.cover {
-    overflow: hidden;
-}
-.image-wrap.column-3{
-	width:33.3333%;
-	float:left;
-}
-.mainContent .columns .title{
-	font-weight:700;
-	font-size:20px;
-	margin:0 0 5px;
-}
-.mainContent .columns .subtitle{
-	margin:0 0 20px;
-}
-.mainContent .columns .description{
-	font-weight:400;
-	font-size:14px;
-	line-height:24px;
-}
-.imageContent{
-	width:50%;
-	float:left;
-	display:table;
-	transition:all 0.5s;
-	height:270px;
-}
-.imageContent .text{
-	display: table-cell;
-    width: 100%;
-    height: 270px;
-    vertical-align: middle;
-}
-.imageSpace{
-	width:50%;
-	float:left;
-}
-.imageSpace img{
-	width:100%;
-	display:block;
-}
-
-.mainContent ul.team-efforts{list-style:none;text-align:left;padding:0;background:#f0f0f0;border-top:1px solid #e0e0e0;}
-.mainContent ul.team-efforts li{font-size:40px;font-weight:400;width:16.6666%;float:left;border-left:1px solid #e0e0e0;padding:25px;box-sizing:border-box;}
-.mainContent ul.team-efforts li.first{border-left:0px solid #aaa;}
-.mainContent ul.team-efforts li h4{font-size:14px;font-weight:400;display:block;margin:0;padding:0;color:#666;}
-<!-- .image-wrap:hover .imageContent{
-	display:block !important;
-	transition:all 0.5s;
-} -->
 </style>
 </head>
-<body class="site-loaded about" data-scheme="dark" data-color="orange">
-<!-- Header -->
-<header id="header" class="header-portable" style="pointer-events:all !important;">
-	<div class="header-wrapper" style="filter:blur(0px) !important;-moz-filter:blur(0px) !important;-webkit-filter:blur(0px) !important;">
-		<!-- Logo -->
-		<a href="home" data-change-view="true" class="logo" style="animation:0s logoLoading infinite !important;-moz-animation:0s logoLoading infinite !important;-webkit-animation:0s logoLoading infinite !important;"></a>
+<body>
+<header id="header">
 
-		<!-- Navigation -->
-		<nav id="main-nav" style="padding-left:9px;">
-			<ul class="nav nav-horizontal nav-main">
-				<li class="active"><a href="about" data-change-view="true">About</a></li>
-				<li><a href="services" data-change-view="true">Services</a></li>
-				<li><a href="portfolio" data-change-view="true">Hosting Options</a></li>
-				<li><a href="contact" data-change-view="true">Contact &amp; Support</a></li>
-			</ul>
-			<span id="nav-selector" class="bg-primary" style="left: -4px; width: 82px;"></span>
-		</nav>
-		<!-- Language -->
-
-		<!-- Login -->
-		<style media="screen">
-		  .left-header-btn:before{margin: -5px;}
-		</style>
-		<a href="dbxlogin" id="header-login-btn" class="left-header-btn" data-change-view="true"> <!-- <i class="fa fa-lock"></i> --> Login<i class="fa fa-angle-right"></i></a>
-		<!-- <li><a href="login" class="left-header-btn"data-change-view="true">Services</a></li> -->
-
-		<!-- Text -->
-		<div class="typing"><span id="typing-text" class="typing-text">Let's create something together!  <a href="contact" data-change-view="true" class="text-primary">Get free quote!</a></span><span class="typed-cursor">|</span></div>
-
-		<!-- Mobile Title -->
-		<h1 id="mobile-title"></h1>
-	</div>
 </header>
-<!-- Header / End -->
 
 <!-- Content -->
 <div id="content" class="mainContent">
-	<section class="section visible">
+	<section id="about" class="section visible mainContent">
 		<div class="section-wrapper">
 			<h1><span>Subely</span> is an certified design and hosting company.</h1>
 			<ul class="history">
@@ -180,57 +72,31 @@ body.about .section-wrapper{display:flex; justify-content:center; flex-direction
 				<a href="" class="btn btn-primary">Services</a>
 				<a href="" class="btn btn-danger">Contact Subely</a>
 			</div>
-			<!-- <div id="accordion" class="aboutAccordian">
-			   <div class="card">
-				  <div class="card-header" id="headingOne">
-					 <h5 class="mb-0">
-						<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-						Collapsible Group Item #1
-						</button>
-					 </h5>
-				  </div>
-				  <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-					 <div class="card-body">
-						Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-					 </div>
-				  </div>
-			   </div>
-			   <div class="card">
-				  <div class="card-header" id="headingTwo">
-					 <h5 class="mb-0">
-						<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-						Collapsible Group Item #2
-						</button>
-					 </h5>
-				  </div>
-				  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-					 <div class="card-body">
-						Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-					 </div>
-				  </div>
-			   </div>
-			   <div class="card">
-				  <div class="card-header" id="headingThree">
-					 <h5 class="mb-0">
-						<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-						Collapsible Group Item #3
-						</button>
-					 </h5>
-				  </div>
-				  <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-					 <div class="card-body">
-						Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-					 </div>
-				  </div>
-			   </div>
-			</div> -->
 		</div>
 	</section>
 </div>
 <!-- Content / End -->
+<!-- Ajax Modal -->
+
+<!-- Mobile Navigation -->
+<button id="mobile-nav-toggle" class="icon icon-sm icon-circle icon-primary" data-target="mobile-nav"><i class="ti-menu"></i><i class="ti-close"></i></button>
+<nav id="mobile-nav">
+
+</nav>
+<div id="tmp"></div>
+
 
 <!-- JS Libraries -->
 <script src="../../assets/js/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+
+
+<!-- JS Plugins -->
+<script src="../../assets/js/plugins.js"></script>
+
+<!-- JS Core -->
+<script src="../../assets/js/actions.js"></script>
+<script src="../../assets/js/components.js"></script>
+<script src="../../assets/js/base.js"></script>
+
 </body>
 </html>
